k8s/app-clase-2/namespace.yaml
# ── Namespace ────────────────────────────────────────────────────────────────
apiVersion: v1
kind: Namespace
metadata:
  name: load-api
