k8s/app-clase-2/service.yaml
# ── Service ───────────────────────────────────────────────────────────────────
apiVersion: v1
kind: Service
metadata:
  name: load-api-service
  namespace: load-api
  annotations:
    cloud.google.com/app-protocols: '{"http":"HTTP"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: load-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
